@@ -2,5 +2,4 @@
 libtoolize --copy --force --automake
 aclocal
 automake --add-missing -c
-autoconf
-
+autoconf-2.53
