@@ -91,6 +91,8 @@ int vsnprintf(char *str, size_t size, const char *format, va_list ap);
 #endif
 
 char * y_string_append(char * str, char * append);
+char * y_str_to_utf8(const char * in);
+char * y_utf8_to_str(const char * in);
 
 #endif
 
